@@ -43,6 +43,8 @@ The following bugs were resolved with this release:
   [33245] nptl: nptl: error in internal cancellation syscall handling
   [33361] nss: Group merge does not react to ERANGE during merge
   [33601] aarch64: Do not link conform tests with -Wl,-z,force-bti
+  [33814] glob: wordexp with WRDE_REUSE and WRDE_APPEND may return
+    uninitialized memory
 
 Version 2.41
 
